--- a/.poggit.yml
+++ b/.poggit.yml
@@ -1,6 +1,6 @@
 --- # Poggit-CI Manifest. Open the CI at https://poggit.pmmp.io/ci/David202020/Wizard-Kit
 branches:
-- master
+- patch-1
 projects:
   Wizard-Kit:
     path: ""
